--- a/index.html
+++ b/index.html
@@ -4,18 +4,32 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Wildways</title>
-		<title><img src="templates/img/logo.jpg" alt=""></title>
+		<link
+			rel="stylesheet"
+			href="templates/css/index.css
+		"
+		/>
 	</head>
 	<body>
-		<header>
-			<header-img-logo>
-				<!-- <img src="templates/img/logo-black.png" alt="Wildways"/> -->
-				<img src="templates/img/logo-white.png" alt="Wildways" />
-			</header-img-logo>
-		</header>
-		<section class="main-photo">
-			<img src="templates/img/main-photo.jpg" alt="Wildways" />
+		<header></header>
+		<section class="main">
+			<div class="bg-overlay"></div>
+			<div class="black"></div>
+			<img
+				class="main-img"
+				src="templates/img/main-photo_1.jpg"
+				alt="Wildways"
+			/>
+			<div class="fixed-container-for-text">
+				<div class="container">
+					<div class="center-text">
+						<h2>У ТЕБЯ ВСЁ ПОЛУЧИТСЯ</h2>
+					</div>
+				</div>
+			</div>
+			<div class="black"></div>
 		</section>
+
 		<footer></footer>
 	</body>
 </html>
