--- a/index.html
+++ b/index.html
@@ -15,19 +15,33 @@
 		<section class="main">
 			<div class="bg-overlay"></div>
 			<div class="black"></div>
+			<div class="fixed-container-for-text">
+				<div class="container">
+					<div class="center-text">
+						<h2>ТЫ СДЕЛАЛ ВСЁ, ЧТОБЫ БЫТЬ ЗДЕСЬ</h2>
+						<a href="https://t.me/wildwaysofficial">telegram</a>
+						<a href="https://vk.com/wildways">vk</a>
+						<a href="https://www.youtube.com/SarahWhereIsMyTea">youtube</a>
+						<a
+							href="https://www.instagram.com/wildwaysofficial?igsh=MTkxbmZtcWV6YzBneA=="
+							>inst</a
+						>
+					</div>
+				</div>
+			</div>
 			<img
 				class="main-img"
 				src="templates/img/main-photo_1.jpg"
 				alt="Wildways"
 			/>
-			<div class="fixed-container-for-text">
-				<div class="container">
-					<div class="center-text">
-						<h2>У ТЕБЯ ВСЁ ПОЛУЧИТСЯ</h2>
-					</div>
+			<div class="black"></div>
+		</section>
+		<section class="disclaimer">
+			<div class="container">
+				<div class="disc-text">
+					<h1>disclaimer</h1>
 				</div>
 			</div>
-			<div class="black"></div>
 		</section>
 
 		<footer></footer>
